--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./for loop task.js">
+    <form onsubmit="inputs(event)">
+        Username<input type="text" id="username">
+        Password<input type="password" id="password">
+        
+        <button id="submit">Submit</button>
+    </form>
+    <script src="./input.js">
 
     </script>
 </body>
