Added more input types

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
         Username<input type="text" id="username">
         Password<input type="password" id="password">
         
+        <select id="city">
+            <option value="">Select an Option</option>
+            <option value="London">London</option>
+            <option value="Paris">Paris</option>
+            <option value="Rome">Rome</option>
+        </select>
+        Male <input type="radio" value="Male" name="gender">
+        Female <input type="radio" value="Female" name="gender">
+        Other <input type="radio" value="Other" name="gender">
+
         <button id="submit">Submit</button>
     </form>
     <script src="./input.js">
