JavaScript input validation form VerFour

--- a/Form 01.08.23/index.html
+++ b/Form 01.08.23/index.html
@@ -25,6 +25,7 @@
 
         <button id="submit">Submit</button>
     </form>
+    <p id="paragraph"></p>
     <script src="input.js">
     </script> 
 
