JavaScript input validation form VerFive

--- a/Form 01.08.23/index.html
+++ b/Form 01.08.23/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <form onsubmit="inputs(event)">
-        Name<input type="text" id="userName">
-        Surname<input type="text" id="userSurname">
-        Password<input type="password" id="userPassword">
+        Name<input type="text" id="Username">
+        Surname<input type="text" id="Surname">
+        Password<input type="password" id="Password">
 
-        <select id="country">
+        <select id="Country">
             <option value="">Select a Country</option>
             <option value="france">France</option>
             <option value="united_kingdom">United Kingdom</option>
