--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Quiz</h1>
+    <h1>Geography Quiz</h1>
     <div id="quiz-container">
        
     </div>
