--- a/Balloons in a box/index.html
+++ b/Balloons in a box/index.html
@@ -6,10 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="showBalloon">
-
-    </div>
-    <button type="button" onclick="createImage(event)">Add a Balloon</button>
+    <canvas id="canvas" width="800" height="800" style="border:1px solid black;">
+    </canvas>
+    <button type="button" onclick="balloon(event)">Add a Balloon</button>
     <script src="script.js">
     </script>
 </body>
