--- a/Balloons in a box/index.html
+++ b/Balloons in a box/index.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="mycss.css">
 </head>
-<body>
-    <canvas id="canvas" width="800" height="800" style="border:1px solid black;">
-    </canvas>
-    <button type="button" onclick="balloon(event)">Add a Balloon</button>
+<body onload="balloonMovement()">
+    <div id="canvas">
+        <img src="balloonimg0.jpg" class="balloonclass" alt="" >
+        <img src="balloonimg1.jpg" class="balloonclass" alt="" >
+        <img src="balloonimg2.jpg" class="balloonclass" alt="" >
+    </div>
+    <div id="addBalloon">
+        <button type="button" onclick="addBalloon()">Add a Balloon</button>
+    </div>
     <script src="script.js">
     </script>
 </body>
